# utilities

./: .gitignore  README
android/adb/: Makefile.am  configure.ac
android/adb/adb/: Makefile.am  services.c
android/adb/libcutils/: Makefile.am  mspace.c
android/brcm_patchram_plus/: configure.ac
android/image-utils/: ChangeLog  Makefile.am  NEWS  README  configure.ac
android/image-utils/ext4_utils/: Makefile.am
android/image-utils/fastboot/: Makefile.am
android/image-utils/include/: Makefile.am
android/image-utils/libmincrypt/: Makefile.am
android/image-utils/libzipfile/: Makefile.am
android/image-utils/mkbootimg/: Makefile.am  mkbootimg.c  unbootimg.c
android/libnetutils/: Makefile.am  configure.ac  netutils-1.0.pc.in
android/libnetutils/netutils/: Makefile.am  ifc_utils.c
android/mkbootimg/: Makefile.am  README  configure.ac
android/mkbootimg/src/lib/: Makefile.am
android/rpc/: .gitignore  AUTHORS  Makefile.am  README  android-rpc-1.0.pc.in  configure.ac
android/rpc/android-rpc/: clnt.h
android/rpc/data/: Makefile.am  org.freesmartphone.msmgps.service.in
android/rpc/fso-msm-gps-activator/: Makefile.am  gps.c  main.vala
android/rpc/gps/: Makefile.am  main.c
android/rpc/librpc/: Makefile.am  clnt.c  debug.h  ops.c  rpc.c  svc.c  svc_clnt_common.c  xdr.c
android/rpc/rpc/: rpc.h  types.h
gta04/gps-handler/: gps_handler.py  setup.py
nexuss/alsa-initializer/: configure.ac
nexuss/alsa-initializer/src/: Makefile.am  main.vala
nexuss/alsa-scenario-hook/: Makefile.am  configure.ac
nexuss/alsa-scenario-hook/src/: Makefile.am  alsa-wrapper.c  plugin.vala
nexuss/alsa-scenario-hook/vapi/: Makefile.am
nokian900/: .gitignore
nokian900/cmtspeechtest/: ChangeLog  README  configure.ac
nokian900/cmtspeechtest/src/: Makefile.am  cmtspeechtest  main.c  main.vala
nokian900/cmtspeechtest/vapi/: libcmtspeechdata.vapi
palmpre/: .gitignore
palmpre/audio-test/: Makefile  README  audio-test.c  autogen.sh  configure.ac
palmpre/audio-test/src/: Makefile.am  audio-test.c
palmpre/fso-installer/: HOWTO  Makefile  README
palmpre/fso-installer/scripts/: setup-extra.sh
palmpre/hid-uinput/: configure.ac
palmpre/hid-uinput/src/: Makefile.am  hid.h  main.c
palmpre/hidduin/: Makefile.am  configure.ac
palmpre/hidduin/src/: Makefile.am  hidduin.c
palmpre/libhid-stub/: README  configure.ac
palmpre/libhid-stub/src/: Makefile.am  hid.c
palmpre/modemctrl/: Makefile.am  configure.ac
palmpre/modemctrl/src/: main.vala
palmpre/openembedded-webos/: Makefile
palmpre/openembedded-webos/scripts/: unpack-doctor-rootfs
palmpre/openembedded-webos/support/: cross-compile.mk  download.mk  stage-rootfs.mk
palmpre/palmpre-system-deps/: COPYING  Makefile.am  configure.ac  palmpre-system-deps-1.0.pc.in
palmpre/palmpre-system-deps/src/: Makefile.am
palmpre/palmpre-system-deps/vapi/: Makefile.am  hsuart.vapi
palmpre/preboot/: Makefile.am  configure.ac
palmpre/preboot/conf/: Makefile.am  preboot.conf
palmpre/preboot/data/themes/: Makefile.am
palmpre/preboot/data/themes/default/: build.sh  default.edc
palmpre/preboot/src/: Makefile.am  main.vala
palmpre/preboot/vapi/: config.vapi
palmpre/read_tokens/: Makefile  Makefile.am  README  configure.ac  read_tokens.c
palmpre/read_tokens/src/: Makefile.am  read_tokens.c
palmpre/scripts/: setup-fso-rootfs.sh
palmpre/tellbootie/: configure.ac
palmpre/tellbootie/src/: Makefile.am  tellbootie.c
palmpre/tslib/: AUTHORS  configure.ac
palmpre/tslib-hid/src/: Makefile.am  hid.h
palmpre/tslib-hid/tslib/: Makefile.am
palmpre/tslib/src/: Makefile.am  tslib.c  tslib.h
palmpre/tsmd/: AUTHORS  Makefile.am  README  configure.ac
palmpre/tsmd/src/: Makefile.am  tsmd.c  tsmd.h
palmpre/webos-libs/: Makefile
palmpre/webos-libs/scripts/: generate-libs-install-script
palmpre/webos-libs/support/: install-libs.mk  install.mk  stage-rootfs.mk  staging.mk
