NULL =

SUBDIRS = \
	include \
	libmincrypt \
	libzipfile \
	mkbootimg \
	fastboot \
	$(NULL)

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
		       ltconfig ltmain.sh missing mkinstalldirs \
		       stamp-h.in acconfig.h depcomp

EXTRA_DIST = README AUTHORS COPYING autogen.sh


