NULL =

SUBDIRS = \
	netutils \
	$(NULL)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = netutils-1.0.pc


EXTRA_DIST = \
	$(NULL)

MAINTAINERCLEANFILES = \
  aclocal.m4 compile config.guess config.sub \
  configure depcomp install-sh ltmain.sh     \
  Makefile.in missing config.h.in            \
  mkinstalldirs *~ \
  $(NULL)
