SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
		       ltconfig ltmain.sh missing mkinstalldirs \
		       stamp-h.in acconfig.h depcomp

noticedir = $(datadir)/mkbootimg
dist_notice_DATA = COPYING

EXTRA_DIST = README AUTHORS COPYING autogen.sh

installed_headersdir = $(prefix)/include/libmincrypt
installed_headers_DATA = config.h

