SUBDIRS = librpc gps fso-msm-gps-activator

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = android-rpc-1.0.pc

MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess \
                       config.h.in config.sub configure install-sh \
		       ltconfig ltmain.sh missing mkinstalldirs \
		       stamp-h.in acconfig.h depcomp

EXTRA_DIST = README AUTHORS COPYING autogen.sh android-rpc-1.0.pc.in
