include $(top_srcdir)/Makefile.decl
NULL =

SUBDIRS = src vapi

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = palmpre-system-deps-1.0.pc

EXTRA_DIST += \
	palmpre-system-deps-1.0.pc.in \
	$(NULL)


MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                       configure depcomp install-sh ltmain.sh     \
                       Makefile.in missing config.h.in            \
                       mkinstalldirs \
                       $(NULL)

