AC_INIT([palmpre-system-deps], [0.1.0], [morphis@gravedo.de], [palmpre-system-deps])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])

AC_CONFIG_FILES([
  Makefile
  palmpre-system-deps-1.0.pc
  src/Makefile
  vapi/Makefile])

AC_OUTPUT
