AC_PREREQ(2.53)
AC_INIT([read_tokens], [1.0.0], [morphis@gravedo.de], [read_tokens])
AM_INIT_AUTOMAKE()
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_GNU_SOURCE
AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_LIBTOOL
AC_LIBTOOL_DLOPEN

# output stuff
AC_CONFIG_FILES([
Makefile
src/Makefile
])

AC_OUTPUT
